lustre/llite/namei.c
@@ -1,5 +1,5 @@
 /* -*- mode: c; c-basic-offset: 8; indent-tabs-mode: nil; -*-
- * vim:expandtab:shiftwidth=8:tabstop=8:
+ * vim:shiftwidth=8:tabstop=8:
  *
  * GPL HEADER START
  *
@@ -347,7 +347,9 @@ static void ll_d_add(struct dentry *de, struct inode *inode)
         de->d_inode = inode;
         /* d_instantiate() replacement code should initialize security
          * context. */
+	spin_unlock(&dcache_lock);
         security_d_instantiate(de, inode);
+	spin_lock(&dcache_lock);
 
         /* d_rehash */
         if (!d_unhashed(de)) {
